--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,21 @@ services:
       - POSTGRES_PORT=5432
     ports:
       - 5432:5432
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+
+  api:
+    depends_on:
+      - db
+    build: fastapi/
+    restart: always
+    container_name: api
+    environment:
+      - DB_URL=db
+      - DB=kefir_api
+    ports:
+      - 3112:8000
+    expose:
+      - 8000
+    
+    command: uvicorn run:app --host 0.0.0.0 --port 8000
