--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,5 +29,6 @@ services:
       - 3112:8000
     expose:
       - 8000
+    network_mode: host
     
     command: uvicorn run:app --host 0.0.0.0 --port 8000
